Dodano obsługę trybu ciemnego
Dodano obsługę trybu ciemnego na podstawie localStorage, ustawianego po parametrze url (dla embedowalnych stron publicznych), lub jeśli nie ma to po zapisanej wartości wcześniej lub preferencji przeglądarki.

--- a/SOK.Web/wwwroot/css/site.css
+++ b/SOK.Web/wwwroot/css/site.css
@@ -2,6 +2,7 @@
 @source "./wwwroot/**/*.js,./Views/**/*.cshtml";
 @plugin "daisyui";
 
+@custom-variant dark ([data-theme="dark"] &);
 @custom-variant aria-invalid (&[aria-invalid="true"]);
 
 @theme {
