--- a/SOK.Web/Views/Shared/_Layout.cshtml
+++ b/SOK.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    
+    <script>
+        const urlParams = new URLSearchParams(window.location.search);
+        const urlTheme = urlParams.get("theme");
+        const theme = urlTheme || localStorage.theme || (window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light");
+        document.documentElement.setAttribute("data-theme", theme);
+        if (urlTheme) {
+            localStorage.theme = urlTheme;
+        }
+    </script>
 </head>
 <body class="">
     <header class="fixed top-0 left-0 z-10 w-full">
