--- a/SOK.Web/Views/Shared/_LayoutPublic.cshtml
+++ b/SOK.Web/Views/Shared/_LayoutPublic.cshtml
@@ -11,6 +11,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
+    <script>
+        const urlParams = new URLSearchParams(window.location.search);
+        const urlTheme = urlParams.get("theme");
+        const theme = urlTheme || localStorage.theme || (window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light");
+        document.documentElement.setAttribute("data-theme", theme);
+        if (urlTheme) {
+            localStorage.theme = urlTheme;
+        }
+    </script>
 </head>
 <body class="bg-base-100">
     <div class="min-h-screen w-full flex flex-col items-center justify-start p-6">
