--- a/SOK.Web/Views/Shared/_Layout.cshtml
+++ b/SOK.Web/Views/Shared/_Layout.cshtml
@@ -23,17 +23,7 @@
 </head>
 <body class="">
     <header class="fixed top-0 left-0 z-10 w-full">
-        <div class="navbar bg-base-300 shadow-sm">
-            <div class="navbar-start">
-            </div>
-            <div class="navbar-center">
-                <h2 class="text-xl font-bold">@(ViewData["Title"] ?? "SOK")</h2>
-            </div>
-            <div class="navbar-end">
-                <a asp-controller="Account" asp-action="Logout"
-                   role="button" class="btn btn-primary">Wyloguj</a>
-            </div>
-        </div>
+        <partial name="_Header" />
     </header>
 
     <div class="absolute top-10 left-1/2 z-[1000] w-[90vw] -translate-x-1/2 transform lg:w-md xl:w-lg" id="notification-container">
