Poprawki w widoku mobilnym listy zgłoszeń

--- a/SOK.Web/Views/Shared/_Layout.cshtml
+++ b/SOK.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
         }
     </script>
 </head>
-<body class="">
+<body class="max-h-screen overflow-hidden">
     <header class="fixed top-0 left-0 z-10 w-full">
         <partial name="_Header" />
     </header>
