--- a/SOK.Application/Templates/Email/invalid_email.html
+++ b/SOK.Application/Templates/Email/invalid_email.html
@@ -1,8 +1,138 @@
-<!-- Szablon powiadomienia o nieprawidłowym adresie email -->
-<!-- Do wysyłania manualnego przez administratora -->
-<!-- Dostępne zmienne: %submitter_name%, %submitter_surname%, %submission_uid%, %invalid_email%, %address% -->
-<h2>Nieprawidłowy adres e-mail</h2>
-<p>Szanowny/a %submitter_name% %submitter_surname%,</p>
-<p>Próbowaliśmy skontaktować się z Państwem w sprawie zgłoszenia pod adresem: <strong>%address%</strong></p>
-<p>Niestety, podany przez Państwa adres e-mail (<strong>%invalid_email%</strong>) jest nieprawidłowy lub nie istnieje.</p>
-<p>Prosimy o kontakt z biurem parafialnym w celu aktualizacji danych kontaktowych.</p>
+<div class="u-row-container" style="padding: 0px;background-color: transparent">
+    <div class="u-row"
+        style="margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #ffffff;">
+        <div style="border-collapse: collapse;display: table;width: 100%;height: 100%;background-color: transparent;">
+            <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding: 0px;background-color: transparent;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:600px;"><tr style="background-color: #ffffff;"><![endif]-->
+
+            <!--[if (mso)|(IE)]><td align="center" width="600" style="width: 600px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;" valign="top"><![endif]-->
+            <div class="u-col u-col-100"
+                style="max-width: 320px;min-width: 600px;display: table-cell;vertical-align: top;">
+                <div style="height: 100%;width: 100% !important;">
+                    <!--[if (!mso)&(!IE)]><!-->
+                    <div
+                        style="box-sizing: border-box; height: 100%; padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;">
+                        <!--<![endif]-->
+
+                        <table style="font-family:'Lato',sans-serif;" role="presentation" cellpadding="0"
+                            cellspacing="0" width="100%" border="0">
+                            <tbody>
+                                <tr>
+                                    <td style="overflow-wrap:break-word;word-break:break-word;padding:40px 40px 20px;font-family:'Lato',sans-serif;"
+                                        align="left">
+
+                                        <!--[if mso]><table width="100%"><tr><td><![endif]-->
+                                        <h2
+                                            style="margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-size: 20px; font-weight: 400;">
+                                            <p style="line-height: 140%;"><span
+                                                    style="color: #666666; line-height: 19.6px;"><span
+                                                        style="line-height: 25.2px;">Szczęść
+                                                        Boże!</span></span></p>
+                                        </h2>
+                                        <!--[if mso]></td></tr></table><![endif]-->
+
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <table style="font-family:'Lato',sans-serif;" role="presentation" cellpadding="0"
+                            cellspacing="0" width="100%" border="0">
+                            <tbody>
+                                <tr>
+                                    <td style="overflow-wrap:break-word;word-break:break-word;padding:20px 40px;font-family:'Lato',sans-serif;"
+                                        align="left">
+
+                                        <div
+                                            style="font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;">
+                                            <p style="line-height: 140%;"><span
+                                                    style="color: #666666; line-height: 19.6px;"><span
+                                                        style="font-size: 18px; line-height: 25.2px;">Wykryliśmy, że
+                                                        mogła nastąpić pomyłka przy wprowadzaniu adresu mailowego w
+                                                        formularzu zgłoszeniowym do wizyty duszpasterskiej - został
+                                                        wprowadzony adres <span
+                                                            style="font-style: italic;">%bad_email%</span>,
+                                                        który jest nieosiągalny.</span></span>
+                                            </p>
+                                        </div>
+
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <table style="font-family:'Lato',sans-serif;" role="presentation" cellpadding="0"
+                            cellspacing="0" width="100%" border="0">
+                            <tbody>
+                                <tr>
+                                    <td style="overflow-wrap:break-word;word-break:break-word;padding:20px 40px 10px;font-family:'Lato',sans-serif;"
+                                        align="left">
+
+                                        <div
+                                            style="font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;">
+                                            <p style="line-height: 140%;"><span
+                                                    style="color: #666666; line-height: 19.6px;"><span
+                                                        style="font-size: 18px; line-height: 25.2px;">Wysyłamy tę
+                                                        wiadomość na ten adres mailowy, ponieważ jest on bardziej zgodny
+                                                        z pozostałymi danymi z formularza. Jeśli jest to poprawny adres,
+                                                        prosimy o informację zwrotną.</span></span></p>
+                                        </div>
+
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+
+                        <table style="font-family:'Lato',sans-serif;" role="presentation" cellpadding="0"
+                            cellspacing="0" width="100%" border="0">
+                            <tbody>
+                                <tr>
+                                    <td style="overflow-wrap:break-word;word-break:break-word;padding:40px 40px 30px;font-family:'Lato',sans-serif;"
+                                        align="left">
+
+                                        <div
+                                            style="font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;">
+                                            <p style="font-size: 14px; line-height: 140%; text-align: center;">
+                                                <span style="color: #888888; font-size: 14px; line-height: 19.6px;"><em><span
+                                                            style="font-size: 16px; font-weight: 700; line-height: 22.4px;">Jeśli
+                                                            to nie Ty dokonałeś/aś zgłoszenia, prosimy zignorować ten
+                                                            mail, a ten adres mailowy nie zostanie włączony do naszej
+                                                            bazy.</span></em></span>
+                                            </p>
+                                        </div>
+
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <table style="font-family:'Lato',sans-serif;" role="presentation" cellpadding="0"
+                            cellspacing="0" width="100%" border="0">
+                            <tbody>
+                                <tr>
+                                    <td style="overflow-wrap:break-word;word-break:break-word;padding:20px 40px 30px;font-family:'Lato',sans-serif;"
+                                        align="left">
+
+                                        <div
+                                            style="font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;">
+                                            <p style="line-height: 140%; text-align: right;"><span
+                                                    style="color: #666666; line-height: 19.6px;"><span
+                                                        style="font-size: 18px; line-height: 25.2px;">Duszpasterstwo
+                                                        parafii</span></span></p>
+                                        </div>
+
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <!--[if (!mso)&(!IE)]><!-->
+                    </div>
+                    <!--<![endif]-->
+                </div>
+            </div>
+            <!--[if (mso)|(IE)]></td><![endif]-->
+            <!--[if (mso)|(IE)]></tr></table></td></tr></table><![endif]-->
+        </div>
+    </div>
+</div>
