Poprawka templatki maila

--- a/SOK.Application/Templates/Email/confirmation.html
+++ b/SOK.Application/Templates/Email/confirmation.html
@@ -91,10 +91,7 @@
                                                 <span style="color: #888888; font-size: 14px; line-height: 19.6px;"><em><span
                                                             style="font-size: 16px; line-height: 22.4px;">Jeśli
                                                             dane w panelu są niepoprawne, prosimy o
-                                                            <a rel="noopener"
-                                                                href="https://milosierdzie.wroclaw.pl/kontakt/"
-                                                                target="_blank">kontakt z
-                                                                parafią</a>.</span></em></span>
+                                                            kontakt z parafią.</span></em></span>
                                             </p>
                                         </div>
 
