Statystyka zgłoszeń na stronie głównej

--- a/SOK.Web/Views/Shared/_Layout.cshtml
+++ b/SOK.Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
         <partial name="_Notification" />
     </div>
     
-    <div class="flex h-full w-full justify-items-center overflow-y-hidden">
+    <div class="flex h-full w-full justify-items-center overflow-y-hidden has-[main]:has-[.card.bg-base-100]:bg-base-200">
         <div id="sidebar" class="bg-base-300 z-20 flex w-14 flex-col gap-2 px-2 py-2 transition-[width]">
             <partial name="_Sidebar" />
         </div>
